Fixed text overflow issue in super admin cards

--- a/src/css/SuperAdminPage.css
+++ b/src/css/SuperAdminPage.css
@@ -100,7 +100,6 @@
 }
 .super-admin-complaint-content {
   padding: 10px 20px;
-  overflow: hidden;
 }
 .title-super-admin-complaint{
   text-align: center;
@@ -119,7 +118,7 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-.super-admin-details{
+.super-admin-details p{
   margin: 5px 0;
   white-space: nowrap;
   overflow: hidden;
